--- a/stable-diffusion-webui-api-main/create_inference_endpoint.ipynb
+++ b/stable-diffusion-webui-api-main/create_inference_endpoint.ipynb
@@ -354,7 +354,84 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "from sagemaker.predictor_async import AsyncPredictor\n",
+    "\n",
+    "# 实例化一个 AsyncPredictor 对象\n",
+    "async_predictor = AsyncPredictor(Predictor(endpoint_name=\"Test2\")) # [Need to Define] endpoint_name 改成你创建的名称\n",
+    "\n",
+    "#=============== 以下代码全部拷贝自 4.1 & 4.2 章节 ===============#\n",
+    "\n",
+    "async_predictor.serializer = JSONSerializer()\n",
+    "async_predictor.deserializer = JSONDeserializer()\n",
+    "\n",
+    "# inputs 是调用的 payload，和开源 stable-diffusion-webui 一致\n",
+    "inputs = {\n",
+    "    'task': 'text-to-image', \n",
+    "    'model': 'rpg.safetensors',\n",
+    "    'txt2img_payload': {\n",
+    "        'enable_hr': False, \n",
+    "        'denoising_strength': 0.7, \n",
+    "        'firstphase_width': 0, \n",
+    "        'firstphase_height': 0, \n",
+    "        'prompt': 'beautiful (swedish:1.3) , Full body armor made of demon (demon armor:1.3), 1 man, (insanely detailed:1.5), light particle, (mist on the floor:1.3), ((solo)), (highest quality, Alessandro Casagrande, Greg Rutkowski, Sally Mann, concept art, 4k), (colorful), (high sharpness), ((detailed pupils)), red eyes, ((painting:1.1)), (digital painting:1.1), detailed face and eyes,Masterpiece, best quality, highly detailed photo:1, 8k, detailed face,photorealistic, dark and gloomy, fog, thunder background, By jeremy mann, by sandra chevrier, by maciej kuciara,((male demon)), sharp, ((perfect body)), realistic, real shadow, 3d, ((squatting warrior)), ((dark and gloomy castle background:1.3)), thunder sky, thunder, (by Michelangelo), king pose:1,1, side view:1,1', \n",
+    "        'negative_prompt': '(bad art, low detail, pencil drawing:1.6), (plain background, grainy, low quality, mutated hands and fingers:1.5), (watermark, thin lines:1.3), (deformed, signature:1.2), (big nipples, blurry, ugly, bad anatomy, extra limbs, undersaturated, low resolution), disfigured, deformations, out of frame, amputee, bad proportions, extra limb, missing limbs, distortion, floating limbs, out of frame, poorly drawn face, poorly drawn hands, text, malformed, error, missing fingers, cropped, jpeg artifacts, teeth, unsharp', \n",
+    "        'styles': ['None', 'None'], \n",
+    "        'seed': -1.0, \n",
+    "        'subseed': -1.0, \n",
+    "        'subseed_strength': 0, \n",
+    "        'seed_resize_from_h': 0, \n",
+    "        'seed_resize_from_w': 0, \n",
+    "        'sampler_index': 'DPM++ 2S a Karras', \n",
+    "        'batch_size': 1, \n",
+    "        'n_iter': 1, \n",
+    "        'steps': 35, \n",
+    "        'cfg_scale': 7, \n",
+    "        'width': 512, \n",
+    "        'height': 512, \n",
+    "        'restore_faces': True, \n",
+    "        'tiling': False, \n",
+    "        'eta': 1, \n",
+    "        's_churn': 0, \n",
+    "        's_tmax': None, \n",
+    "        's_tmin': 0, \n",
+    "        's_noise': 1, \n",
+    "        'override_settings': {}, \n",
+    "        'script_args': [0, False, False, False, \"\", 1, \"\", 0, \"\", True, False, False]}\n",
+    "}\n",
+    "\n",
+    "# 调用 Sagemaker Inference Endpoint 异步推理\n",
+    "prediction = async_predictor.predict_async(inputs, input_path=\"s3://YOUR_BUCKET/\") # [Need to Define]\n",
+    "\n",
+    "from sagemaker.async_inference.waiter_config import WaiterConfig\n",
+    "print(f\"Response output path: {prediction.output_path}\") # 获取异步推理结果存放的 S3 地址\n",
+    "print(\"Start Polling to get response:\") # 开始轮询是否推理完成有结果了\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "config = WaiterConfig(\n",
+    "  max_attempts=100, #  重试次数\n",
+    "  delay=10 #  两次重试之间时间间隔\n",
+    "  )\n",
+    "\n",
+    "prediction.get_result(config)\n",
+    "\n",
+    "print(f\"Time taken: {time.time() - start}s\") # 推理花费时间\n",
+    "print(\"Inference finished\") # 推理完成已有结果\n",
+    "\n",
+    "try:\n",
+    "    bucket, key = get_bucket_and_key(prediction.output_path) # 获取异步推理结果\n",
+    "    obj = s3_resource.Object(bucket, key)\n",
+    "    body = obj.get()['Body'].read().decode('utf-8') \n",
+    "    # 异步推理结果是一个 json 文件，其中 images 字段是一个 list，表示所有图片\n",
+    "    # images 中的每个 item 都是一张图片，用 base64 编码\n",
+    "    for image in json.loads(body)['images']:\n",
+    "        image = Image.open(io.BytesIO(base64.b64decode(image)))\n",
+    "        display(image) # 用 Notebook 原生功能展示图片\n",
+    "except Exception as e:\n",
+    "    traceback.print_exc()\n",
+    "    print(e)"
    ]
   },
   {
