--- a/stable-diffusion-webui-api-main/create_inference_endpoint.ipynb
+++ b/stable-diffusion-webui-api-main/create_inference_endpoint.ipynb
@@ -17,21 +17,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fd873bbe-1dc0-43b3-9405-a0f1655ac48c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "account_id: 525558421402\n",
-      "region_name: us-east-1\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "025fe198-dfe8-428e-822d-5a395f852e0d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import sagemaker\n",
     "import json\n",
@@ -77,11 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "82d28dc7-a052-4096-9615-b9caa19031c0",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "cd4653b5-1b05-4099-bf76-46b725d22583",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sagemaker.model import Model\n",
@@ -124,11 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "72a65756-101c-452d-8cdf-6935a4967ea7",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "a37d428a-6ff7-40b5-aaf7-c058cbb5acba",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sagemaker.async_inference import AsyncInferenceConfig # 用于定义异步推理配置\n",
@@ -149,26 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d88d36e-0d43-495f-bdc0-68aa2cc9fd8b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using already existing model: FunClubModel\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "------"
-     ]
-    }
-   ],
+   "id": "ef8991de-7ddb-4c0e-aea5-2c19503c8317",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 部署 Sagemaker Inference Endpoint\n",
     "predictor = model.deploy(\n",
@@ -346,18 +314,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "92a13b64-ccf2-43fe-a984-05b8ef3390ca",
+   "cell_type": "markdown",
+   "id": "ed7f870d-12ca-47f8-ae50-10539a761e0c",
    "metadata": {
     "tags": []
    },
+   "source": [
+    "## 5.1 使用 Sagemaker SDK 进行推理\n",
+    "\n",
+    "使用 Sagemaker SDK 进行推理比较直观：\n",
+    "1. 实例化一个 AsyncPredictor 对象\n",
+    "2. 调用 AsyncPredictor 的 predict_async 方法进行异步推理\n",
+    "3. 注意，在调用 predict_async 的时候需要指定一个 S3 地址作为 inputs payload 存放的地址"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d733e636-a766-4c30-b773-a7e10a30aa53",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sagemaker.predictor_async import AsyncPredictor\n",
     "\n",
     "# 实例化一个 AsyncPredictor 对象\n",
-    "async_predictor = AsyncPredictor(Predictor(endpoint_name=\"Test2\")) # [Need to Define] endpoint_name 改成你创建的名称\n",
+    "async_predictor = AsyncPredictor(Predictor(endpoint_name=\"YOUR_ENDPOINT\")) # [Need to Define] endpoint_name 改成你创建的名称\n",
     "\n",
     "#=============== 以下代码全部拷贝自 4.1 & 4.2 章节 ===============#\n",
     "\n",
@@ -432,6 +413,113 @@
     "except Exception as e:\n",
     "    traceback.print_exc()\n",
     "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e87e42ee-4ff1-4f56-91f6-e0f8488d127e",
+   "metadata": {},
+   "source": [
+    "## 5.2 用 Boto3 调用异步推理节点\n",
+    "\n",
+    "在进行 stable-diffusion Serverless API 部署的过程中，如果 API 只需要进行异步推理而不涉及 Sagemaker 其他操作，推荐使用 Boto3 来实现：\n",
+    "1. 代码依然很直观\n",
+    "2. 不需要安装 Sagemaker SDK 依赖，通常安装 Sagemaker SDK 依赖后的代码包大小会超过限制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a077829-97e1-4861-904c-09a9edfaac50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 实例化 sagemaker-runtime\n",
+    "sagemaker_client = boto3.client(\"sagemaker-runtime\")\n",
+    "payload = {\n",
+    "    'task': 'text-to-image', \n",
+    "    'model': 'rpg.safetensors',\n",
+    "    'txt2img_payload': {\n",
+    "        'enable_hr': False, \n",
+    "        'denoising_strength': 0.7, \n",
+    "        'firstphase_width': 0, \n",
+    "        'firstphase_height': 0, \n",
+    "        'prompt': 'beautiful (swedish:1.3) , Full body armor made of demon (demon armor:1.3), 1 man, (insanely detailed:1.5), light particle, (mist on the floor:1.3), ((solo)), (highest quality, Alessandro Casagrande, Greg Rutkowski, Sally Mann, concept art, 4k), (colorful), (high sharpness), ((detailed pupils)), red eyes, ((painting:1.1)), (digital painting:1.1), detailed face and eyes,Masterpiece, best quality, highly detailed photo:1, 8k, detailed face,photorealistic, dark and gloomy, fog, thunder background, By jeremy mann, by sandra chevrier, by maciej kuciara,((male demon)), sharp, ((perfect body)), realistic, real shadow, 3d, ((squatting warrior)), ((dark and gloomy castle background:1.3)), thunder sky, thunder, (by Michelangelo), king pose:1,1, side view:1,1', \n",
+    "        'negative_prompt': '(bad art, low detail, pencil drawing:1.6), (plain background, grainy, low quality, mutated hands and fingers:1.5), (watermark, thin lines:1.3), (deformed, signature:1.2), (big nipples, blurry, ugly, bad anatomy, extra limbs, undersaturated, low resolution), disfigured, deformations, out of frame, amputee, bad proportions, extra limb, missing limbs, distortion, floating limbs, out of frame, poorly drawn face, poorly drawn hands, text, malformed, error, missing fingers, cropped, jpeg artifacts, teeth, unsharp', \n",
+    "        'styles': ['None', 'None'], \n",
+    "        'seed': -1.0, \n",
+    "        'subseed': -1.0, \n",
+    "        'subseed_strength': 0, \n",
+    "        'seed_resize_from_h': 0, \n",
+    "        'seed_resize_from_w': 0, \n",
+    "        'sampler_index': 'DPM++ 2S a Karras', \n",
+    "        'batch_size': 1, \n",
+    "        'n_iter': 1, \n",
+    "        'steps': 35, \n",
+    "        'cfg_scale': 7, \n",
+    "        'width': 512, \n",
+    "        'height': 512, \n",
+    "        'restore_faces': True, \n",
+    "        'tiling': False, \n",
+    "        'eta': 1, \n",
+    "        's_churn': 0, \n",
+    "        's_tmax': None, \n",
+    "        's_tmin': 0, \n",
+    "        's_noise': 1, \n",
+    "        'override_settings': {}, \n",
+    "        'script_args': [0, False, False, False, \"\", 1, \"\", 0, \"\", True, False, False]}\n",
+    "}\n",
+    "\n",
+    "import uuid\n",
+    "inference_id = str(uuid.uuid4()) # 生成一个唯一的 id 来识别调用\n",
+    "\n",
+    "S3_InputBucket = \"YOUR_BUCKET\" # [Need to Define]\n",
+    "# 把上面的 payload 写到 S3 的一个位置，作为参数传给后面的 Sagemaker invoke_endpoint_async 调用方法\n",
+    "s3_resource = boto3.resource(\"s3\")\n",
+    "s3_object = s3_resource.Object(S3_InputBucket, f\"inputs/{inference_id}\")\n",
+    "s3_object.put(Body=bytes(json.dumps(payload).encode('UTF-8')))\n",
+    "input_location = f\"s3://{S3_InputBucket}/inputs/{inference_id}\"\n",
+    "\n",
+    "# 使用 Boto3 调用 Sagemaker 异步推理\n",
+    "response = sagemaker_client.invoke_endpoint_async(\n",
+    "        EndpointName=\"YOUR_ENDPOINT\", #  [Need to Define]\n",
+    "        ContentType='application/json',\n",
+    "        Accept=\"application/json;jpeg\",\n",
+    "        InputLocation=input_location\n",
+    ")\n",
+    "\n",
+    "# 异步推理结果存放的 S3 地址\n",
+    "output_location = response[\"OutputLocation\"]\n",
+    "print(output_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d71d86b3-8d7d-458c-89a7-0f5236d60c7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 此时异步推理可能还未完成\n",
+    "# 可以重复运行当前 Cell 尝试异步推理结果是否已生成\n",
+    "from botocore.exceptions import ClientError\n",
+    "\n",
+    "bucket, key = get_bucket_and_key(output_location)\n",
+    "try:\n",
+    "    bucket, key = get_bucket_and_key(output_location) # 获取异步推理结果\n",
+    "    obj = s3_resource.Object(bucket, key)\n",
+    "    body = obj.get()['Body'].read().decode('utf-8') \n",
+    "    # 异步推理结果是一个 json 文件，其中 images 字段是一个 list，表示所有图片\n",
+    "    # images 中的每个 item 都是一张图片，用 base64 编码\n",
+    "    for image in json.loads(body)['images']:\n",
+    "        image = Image.open(io.BytesIO(base64.b64decode(image)))\n",
+    "        display(image) # 用 Notebook 原生功能展示图片\n",
+    "except ClientError as e:\n",
+    "    if e.response['Error']['Code'] == 'NoSuchKey':\n",
+    "        print(\"Results not generated yet.\")\n",
+    "    else:\n",
+    "        traceback.print_exc()\n",
+    "        print(e)"
    ]
   },
   {
