--- a/stable-diffusion-webui-api-main/create_inference_endpoint.ipynb
+++ b/stable-diffusion-webui-api-main/create_inference_endpoint.ipynb
@@ -77,7 +77,7 @@
     "# 模型的环境变量\n",
     "model_environment = {\n",
     "    'SAGEMAKER_MODEL_SERVER_TIMEOUT': '1200',\n",
-    "    'ckpt': '/opt/ml/model/Stable-diffusion/YOUR_MODEL.safetensors' # [Need to Define] 默认模型，这里改成你打包的模型里的某个文件名\n",
+    "    'ckpt': '/opt/ml/model/Stable-diffusion/YOUR_MODEL.safetensors' # [Need to Define] 默认模型，这里改成你打包的模型里的某个文件名，只需修改模型名称，不需修改路径\n",
     "}\n",
     "\n",
     "# 实例化一个 Sagemaker SDK 的 Model，在后面 deploy\n",
